<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UPAC App</string>
    <string name="action_events_button">Events</string>
    <string name="action_gallery_button">Gallery</string>
    <string name="action_about_button">Contact</string>
    <string name="facebook_app_id">320403298153877</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="email">Email</string>
    <string name="board">Board Members</string>
    <string name="splash">Splash Image</string>
</resources>